2007-04-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (aopOp): set size to 1 for ruonly, fixes bug 1699455

2007-04-17 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: fixed #1701874: Mac OSX references in SDCC manual
	* device/lib/ds400/tinibios.c, device/lib/hc08/_divuint.c,
	  device/lib/hc08/_divulong.c: replaced _asm and _endasm keywords
	  with their double underscore equivalent

2007-04-14 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: some additional "freeware" replaced with "free open
	  source"

2007-04-13 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: -pedantic-parse-number is not in conformance with
	  C99 standard
	* device/examples/serialcomm/windows/serial.[ch],
	  device/examples/serialcomm/windows/test_serialcomm.cpp:
	  updated by Bela Torok
	* device/examples/serialcomm/windows/serialcomm.dsw,
	  device/examples/serialcomm/windows/serialcomm.dsp: added

2007-04-13 Jan Waclawek <wek AT efton.sk>

	* doc/sdccman.lyx: additions and changes at various places
	  (submitted as #1697136).
	  (svn commit by Frieder Ferlemann <Frieder.Ferlemann AT web.de>)

2007-04-10 Borut Razem <borut.razem AT siol.net>

	* doc/cdbfileformat.lyx, doc/sdccman.lyx, doc/test_suite_spec.lyx:
	  LyX file format changed to 245
	* doc/sdccman.lyx, doc/README.txt, sdc/SDCC.lex, src/SDCCglue.c:
	  "FreeWare" replaced with "free open source"

2007-04-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/C8051F120.h: added some defines for bits in RSTSRC

2007-04-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/pic16/pic18fregs.h,
	* device/lib/_bp.c,
	* device/lib/_decdptr.c,
	* device/lib/_divsint.c,
	* device/lib/_divslong.c,
	* device/lib/_divuint.c,
	* device/lib/_divulong.c,
	* device/lib/_fs2schar.c,
	* device/lib/_fs2sint.c,
	* device/lib/_fs2slong.c,
	* device/lib/_fs2uchar.c,
	* device/lib/_fs2uint.c,
	* device/lib/_fs2ulong.c,
	* device/lib/_fsadd.c,
	* device/lib/_fscmp.c,