@@ -1,3 +1,10 @@
+2007-04-17 Borut Razem <borut.razem AT siol.net>
+
+	* doc/sdccman.lyx, src/SDCCmain.c, src/SDCCglobal.h, src/ds390/gen.c,
+	  src/hc08/gen.c, src/mcs51/gen.c, src/mcs51/rtrack.c:
+	  fixed #1493816: option --no-gen-comments: --no-gen-comments renamed
+	  to --fno-verbose-asm, to be gcc'ish
+
 2007-04-17 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/mcs51/gen.c (aopOp): set size to 1 for ruonly, fixes bug 1699455
